--- a/index.html
+++ b/index.html
@@ -98,3 +98,4 @@
     <!-- <script type="module" src="firebase-config.js"></script> -->
     <script src="script.js?v=2026021501" type="module"></script>
 </body>
+<!-- redeploy -->
