ボタンを中心に修正

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kikiwake - 音声識別課題</title>
+    <title>百人一首早押し課題</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <!-- SCREEN: Welcome & Metadata -->
         <div id="screen-welcome" class="screen active">
             <h1>Kikiwake 音声識別課題</h1>
-            <p>実験へようこそ。まず、参加者情報を入力してください。</p>
+            <p>参加者情報を入力してください。</p>
             <div class="form-group">
                 <label for="participant-id">参加者ID:</label>
                 <input type="text" id="participant-id" placeholder="IDを入力">
@@ -89,7 +89,6 @@
         <div id="screen-results" class="screen">
             <h2>実験終了</h2>
             <p>ご協力ありがとうございました。</p>
-            <button id="btn-download-logs">ログをダウンロード (CSV)</button>
             <p id="save-status"></p>
         </div>
     </div>
